--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
                   <h2>Desenvolvedor web (front e back-end)</h2>
               </header>
               <section id="paragrafo">
-                <p>Sempre gostei da área de TI e, desde que conheci a programação
-                de computadores, descobri que tenho uma afinidade muito grande e uma facilidade
-                surpreendente. Foi então que decidi seguir na carreira de desenvolvimento, trabalhando e me divertindo.
+                <p>Sempre fui fissurado por <i>softwares</i> e para entender melhor me aventurei no mundo da programação,
+                  onde conheci o desenvolvimento de páginas web e decidi seguir esta carreira. Tento sempre me atualizar às novas tendências, tanto no <i>back-end</i> quanto no <i>front-end</i>.
                 </p>
               </section>
               <section id="independente">
