--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             </div>
         </nav>
         <header id="headertop">
+            <video id="video-background" autoplay loop>
+              <source src="video/backgroundvideo.mp4" type="video/mp4">
+            </video>
             <div id="container-chamada">
                 <h1 id="chamadah1">Olá,</h1>
                 <h2 id="chamadah2">Eu sou desenvolvedor web.</h2>
