--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href='css/pageSection/projetos.css' rel='stylesheet' type='text/css'>
         <link href='css/pageSection/habilidades.css' rel='stylesheet' type='text/css'>
     </head>
-    <body id="corpo">
+    <body>
         <nav id="menu">
             <div id="container">
                 <div id="logo">
@@ -27,7 +27,7 @@
                 </ul>
             </div>
         </nav>
-        <header id="headertop">
+        <header class="parallax" id="headertop">
             <video id="video-background" autoplay loop>
               <source src="video/backgroundvideo.mp4" type="video/mp4">
             </video>
@@ -65,7 +65,7 @@
               </section>
             </article>
         </section>
-        <section id="projetos">
+        <section class="parallax" id="projetos">
             <article id="meusProjetos">
                 <header id="headerArticleProjetos">
                     <h1>Projetos</h1>
