--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+        <title>Willian Laino - Desenvolvedor Web</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href='css/style.css' rel='stylesheet' type='text/css'>
         <link href='css/menu.css' rel='stylesheet' type='text/css'>
@@ -9,6 +10,26 @@
         <link href='css/pageSection/sobremim.css' rel='stylesheet' type='text/css'>
         <link href='css/pageSection/projetos.css' rel='stylesheet' type='text/css'>
         <link href='css/pageSection/habilidades.css' rel='stylesheet' type='text/css'>
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        
+        <!--  ///                             SEO - This site is optimized                                 ///  -->
+        <meta name="description" content="Sou desenvolvedor web no Rio de Janeiro. Veja mais sobre mim."/>
+        <link rel="publisher" href="https://plus.google.com/103079724812520704051/posts"/>
+        <meta property="og:locale" content="pt_BR" />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Willian Laino | Desenvolvedor Web" />
+        <meta property="og:description" content="Sou desenvolvedor web no Rio de Janeiro. Veja mais sobre mim." />
+        <meta property="og:url" content="https://willianlaino.github.io/" />
+        <meta property="og:site_name" content="Willian Laino" />
+        <meta property="fb:admins" content="100001671912086" />
+        <meta property="og:image" content="images/imageog.png" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:description" content="Sou desenvolvedor web no Rio de Janeiro. Veja mais sobre mim." />
+        <meta name="twitter:title" content="Willian Laino | Desenvolvedor Web" />
+        <meta name="twitter:site" content="@willianlaino" />
+        <meta name="twitter:image" content="images/imageog.png" />
+        <!--  ///                                SEO - This site is optimized                              ///  -->
+
     </head>
     <body>
         <nav id="menu">
