--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link href='css/pageSection/projetos.css' rel='stylesheet' type='text/css'>
         <link href='css/pageSection/habilidades.css' rel='stylesheet' type='text/css'>
         <meta name="apple-mobile-web-app-capable" content="yes">
-        
+
         <!--  ///                             SEO - This site is optimized                                 ///  -->
         <meta name="description" content="Sou desenvolvedor web no Rio de Janeiro. Veja mais sobre mim."/>
         <link rel="publisher" href="https://plus.google.com/103079724812520704051/posts"/>
@@ -86,7 +86,7 @@
               </section>
             </article>
         </section>
-        <section class="parallax" id="projetos">
+        <section id="projetos">
             <article id="meusProjetos">
                 <header id="headerArticleProjetos">
                     <h1>Projetos</h1>
