--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <meta property="og:url" content="https://willianlaino.github.io/" />
         <meta property="og:site_name" content="Willian Laino" />
         <meta property="fb:admins" content="100001671912086" />
-        <meta property="og:image" content="images/imageog.png" />
+        <meta property="og:image" content="https://willianlaino.github.io/images/imageog.png" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:description" content="Sou desenvolvedor web no Rio de Janeiro. Veja mais sobre mim." />
         <meta name="twitter:title" content="Willian Laino | Desenvolvedor Web" />
         <meta name="twitter:site" content="@willianlaino" />
-        <meta name="twitter:image" content="images/imageog.png" />
+        <meta name="twitter:image" content="https://willianlaino.github.io/images/imageog.png" />
         <!--  ///                                SEO - This site is optimized                              ///  -->
 
     </head>
