--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                     <li class="lis" id="HABILIDADES"><a href="#habilidades">HABILIDADES</a></li>
                     <li class="lis" id="twitter"><a href="https://twitter.com/willianlaino"><img class="icon" src="icons/twitter.png"/></a></li>
                     <li class="lis" id="github"><a href="https://github.com/willianlaino"><img class="icon" src="icons/github.png"/></a></li>
+                    <li class="lis" id="github"><a href="https://www.facebook.com/willianlainodev"><img class="icon" src="icons/facebook.png"/></a></li>
                 </ul>
             </div>
         </nav>
