--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
         <meta charset="UTF-8">
         <title>Willian Laino - Desenvolvedor Web</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href='css/style.css' rel='stylesheet' type='text/css'>
         <link href='css/menu.css' rel='stylesheet' type='text/css'>
         <link href='css/pageSection/header.css' rel='stylesheet' type='text/css'>
         <link href='css/pageSection/sobremim.css' rel='stylesheet' type='text/css'>
         <link href='css/pageSection/projetos.css' rel='stylesheet' type='text/css'>
         <link href='css/pageSection/habilidades.css' rel='stylesheet' type='text/css'>
+        <link href='css/style.css' rel='stylesheet' type='text/css'>
+        <link href='css/fonts/fonts.css' rel='stylesheet' type='text/css'>
         <meta name="apple-mobile-web-app-capable" content="yes">
 
         <!--  ///                             SEO - This site is optimized                                 ///  -->
@@ -39,13 +40,13 @@
                 </div>
                 <div id="buttonmenu"></div>
                 <ul id="listmenu">
-                    <li class="lis" id="HOME"><a href="#">HOME</a></li>
-                    <li class="lis" id="SOBREMIM"><a href="#sobreMim">SOBRE MIM</a></li>
-                    <li class="lis" id="PROJETOS"><a href="#projetos">PROJETOS</a></li>
-                    <li class="lis" id="HABILIDADES"><a href="#habilidades">HABILIDADES</a></li>
-                    <li class="lis" id="twitter"><a href="https://twitter.com/willianlaino"><img class="icon" src="icons/twitter.png"/></a></li>
-                    <li class="lis" id="github"><a href="https://github.com/willianlaino"><img class="icon" src="icons/github.png"/></a></li>
-                    <li class="lis" id="github"><a href="https://www.facebook.com/willianlainodev"><img class="icon" src="icons/facebook.png"/></a></li>
+                    <li class="lis" id="HOME"><a class="lisa" href="#">HOME</a></li>
+                    <li class="lis" id="SOBREMIM"><a class="lisa" href="#sobreMim">SOBRE MIM</a></li>
+                    <li class="lis" id="PROJETOS"><a class="lisa" href="#projetos">PROJETOS</a></li>
+                    <li class="lis" id="HABILIDADES"><a class="lisa" href="#habilidades">HABILIDADES</a></li>
+                    <li class="lis" id="twitter"><a class="lisa" href="https://twitter.com/willianlaino"><img class="icon" src="icons/twitter.png"/></a></li>
+                    <li class="lis" id="github"><a class="lisa" href="https://github.com/willianlaino"><img class="icon" src="icons/github.png"/></a></li>
+                    <li class="lis" id="github"><a class="lisa" href="https://www.facebook.com/willianlainodev"><img class="icon" src="icons/facebook.png"/></a></li>
                 </ul>
             </div>
         </nav>
@@ -56,7 +57,6 @@
             <div id="container-chamada">
                 <h1 id="chamadah1">Olá,</h1>
                 <h2 id="chamadah2">Eu sou desenvolvedor web.</h2>
-                <h3 id="chamadah3">Conheça os meus projetos.</h3>
             </div>
         </header>
         <section id="sobreMim">
@@ -85,6 +85,7 @@
                     </div>
                   </section>
               </section>
+              <footer></footer>
             </article>
         </section>
         <section id="projetos">
@@ -107,6 +108,7 @@
                         </div></a>
                     </div>
                 </section>
+                <footer></footer>
             </article>
         </section>
         <section id="habilidades">
