--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                 </section>
             </article>
         </section>
+        <!-- teste-->
     </body>
     <script type="text/javascript" src="js/menu/menu.js"></script>
     <script type="text/javascript" src="js/header/effectparallax.js"></script>
