--- a/icons/testeapi.html
+++ b/icons/testeapi.html
@@ -1,1 +1,1 @@
-<html><head></head><body>{"status":true,"su":"http://tv.nowiptv.net:8880,http://minhalista.org:80,http://br2.me,http://dns.clientetv.net:8080,http://main.chopp.me:80","sc":"","ndd":""}</body></html>
+<html><head></head><body>{"status":true,"su":"http://n.srv1.xyz:8880,http://minhalista.org:80,http://br2.me,http://dns.clientetv.net:8080,http://main.chopp.me:80","sc":"","ndd":""}</body></html>
